tests/Core/positive/test042.jvc
-- type annotations

type list : Π A : Type, Type {
  cons : Π A : Type, A → list A → list A;
  nil : Π A : Type, list A;
};

def id : Π A : Type, A → A := λ(A : Type) λ(x : A) x;

def hd : Π A : Type, list A → A := λ(A : Type) λl case l of { cons _ x _ := x };

def tl : Π A : Type, list A → list A := λ(A : Type) λl case l of { cons _ _ y := y };

def main := hd int (tl int (id (list int) (cons int 1 (cons int 2 (nil int)))));

main
