tests/Core/negative/parsing/test018.jvc
type Unit {
  unit : Unit;
};

case unit of {
  _ := 1;
  _ := 2;
}
